@@ -24,7 +24,9 @@
 - flood_blob could loop if start point == ink
 - added im_meta_remove()
 - added remove profile option to vipsthumbnail
-- added vips_bandfmt_iscomplex() and friends, im_iscomplex() deprecated
+- added vips_bandfmt_iscomplex() and friends, im_iscomplex() and friends 
+  deprecated
+- im_bandjoin()/im_gbandjoin() work with images of varying formats
 
 26/11/09 started 7.20.3
 - updated en_GB.po translation 
